--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li class="brand"><img src="logo.png" alt="Shrestha Stream"> Shrestha Stream</li>
+            <li class="brand"><img src="logo.png" alt="Shrestha Stream">StreamifybyShrestha</li>
             <li>Home</li>
             <li>About</li>
         </ul>
@@ -19,6 +19,7 @@
     <div class="container">
         <div class="songList">
             <h1>Groove to Your Favorite Beats</h1>
+            <h2>Created by: Shrestha Hardia</h2>
             <div class="songItemContainer">
                 <div class="songItem">
                     <img alt="1">
